infrastructure/monitoring/kube-prom-stack/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.homelab-gbene.net
      secretName: prometheus-tls
  rules:
    - host: prometheus.homelab-gbene.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus  # adjust if needed
                port:
                  number: 9090
